--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "sinon": "^4.3.0",
     "sinon-chai": "^3.2.0",
     "snappy": "^6.3.4",
+    "source-map-support": "^0.5.19",
     "spec-xunit-file": "0.0.1-3",
     "standard-version": "^9.2.0",
     "tslib": "^2.2.0",
